Adjustments to charts

--- a/Client/homePage.html
+++ b/Client/homePage.html
@@ -13,111 +13,176 @@
     <div class="slideshow-container">
         <div class="mySlides fade">
             <div class="title"><h1 class="title"> Heart diseases statistics </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/correlation.png">
+            <div style="display: grid; grid-template-columns: 50% 50%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="600" src="../Server/OutputImg/correlation.png">
+                </div>
+                <div style="text-align: center;">
+                    <img height="600" src="../Server/OutputImg/Pie/HeartDisease.png">
+                </div>
             </div>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Age&HeartDisease relation </h1></div>
+            <div class="title"><h1 class="slideTitle"> Age&HeartDisease relation </h1></div><br>
             <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Age.png">
-            </div>
+                <img height="500" src="../Server/OutputImg/Rel/Age.png">
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> AlcoholDrinkingHeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/AlcoholDrinking.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> AlcoholDrinking&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/AlcoholDrinking.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/AlcoholDrinking.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Asthma&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Asthma.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Asthma&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Asthma.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Asthma.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> BMI&HeartDisease relation </h1></div>
+            <div class="title"><h1 class="slideTitle"> BMI&HeartDisease relation </h1></div><br>
             <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/BMI.png">
-            </div>
+                <img height="500" src="../Server/OutputImg/Rel/BMI.png">
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Diabetic&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Diabetic.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Diabetic&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Diabetic.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Diabetic.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> DiffWalking&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/DiffWalking.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> DiffWalking&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/DiffWalking.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/DiffWalking.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> GenHealth&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/GenHealth.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> GenHealth&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/GenHealth.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/GenHealth.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> KidneyDisease&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/KidneyDisease.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> KidneyDisease&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/KidneyDisease.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/KidneyDisease.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> MentalHealth&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/MentalHealth.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> PhysicalActivity&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/PhysicalActivity.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/PhysicalActivity.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> PhysicalActivityHeartDisease relation </h1></div>
+            <div class="title"><h1 class="slideTitle"> MentalHealth&HeartDisease relation </h1></div><br>
             <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/PhysicalActivity.png">
-            </div>
+                <img height="500" src="../Server/OutputImg/Rel/MentalHealth.png">
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> PhysicalHealth&HeartDisease relation </h1></div>
+            <div class="title"><h1 class="slideTitle"> PhysicalHealth&HeartDisease relation </h1></div><br>
             <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/PhysicalHealth.png">
-            </div>
+                <img height="500" src="../Server/OutputImg/Rel/PhysicalHealth.png">
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Race&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Race.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Race&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Race.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Race.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Sex&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Sex.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Sex&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Sex.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Sex.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> SkinCancer&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/SkinCancer.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> SkinCancer&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/SkinCancer.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/SkinCancer.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> SleepTime&HeartDisease relation </h1></div>
+            <div class="title"><h1 class="slideTitle"> SleepTime&HeartDisease relation </h1></div><br>
             <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/SleepTime.png">
-            </div>
+                <img height="500" src="../Server/OutputImg/Rel/SleepTime.png">
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Smoking&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Smoking.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Smoking&HeartDisease relation </h1></div><br>
+            <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Smoking.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Smoking.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
-            <div class="title"><h1 class="slideTitle"> Stroke&HeartDisease relation </h1></div>
-            <div style="text-align: center;">
-                <img height="600" src="../Server/OutputImg/Stroke.png">
-            </div>
+            <div class="title"><h1 class="slideTitle"> Stroke&HeartDisease relation </h1></div><br>
+                <div style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
+                <div style="text-align: center;">
+                    <img height="500" src="../Server/OutputImg/Rel/Stroke.png">
+                </div>
+                <div style="text-align: left;">
+                    <img height="450" src="../Server/OutputImg/Pie/Stroke.png">
+                </div>
+            </div><br><br>
         </div>
         <div class="mySlides fade">
             <div class="title"><h1 class="slideTitle"> Predict heart disease </h1></div>
