Improved client page

--- a/Client/homePage.html
+++ b/Client/homePage.html
@@ -283,7 +283,7 @@
                             </select>
                         </div>
                         <div class="tab">
-                            <div style="text-align: left;">
+                            <div style="text-align: center;">
                                 <img src="./res/loading.gif">
                             </div>
                         </div>
@@ -298,6 +298,11 @@
                                 <option value="No">No</option>
                             </select>
                             <button type="submit" id="registerResponse" onclick="registerResponse()">Register response</button>
+                        </div>
+                        <div class="tab">
+                            <div style="text-align: center;">
+                                <img width="300" src="./res/ok.png">
+                            </div>
                         </div>
                         <div style="overflow:auto;">
                             <button type="submit" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
