Centralized client style definition

--- a/Client/homePage.html
+++ b/Client/homePage.html
@@ -13,12 +13,12 @@
     <div class="slideshow-container">
         <div class="mySlides fade">
             <div class="title"><h1 class="title"> Heart diseases statistics </h1></div>
-            <div style="display: grid; grid-template-columns: 10% 40% 40% 10%; justify-items: center;">
+            <div class="grid10404010">
                 <div></div>
-                <div style="text-align: center;">
+                <div class="centeredDiv">
                     <img height="600" src="../Server/outputImg/correlation.png">
                 </div>
-                <div style="text-align: center;">
+                <div class="centeredDiv">
                     <img height="600" src="../Server/outputImg/pie/heartdisease.png">
                 </div>
                 <div></div>
@@ -26,7 +26,7 @@
         </div>
         <div class="mySlides fade">
             <div class="title"><h1 class="title"> Heart diseases & features relation </h1></div>
-            <div style="text-align:center">
+            <div class="centeredDiv">
                 <select onchange="showCharts(this.value)" required>
                     <option value="Age">Age</option>
                     <option value="BMI">BMI</option>
@@ -48,114 +48,114 @@
                 </select>
             </div>
             <div class="slideshow-inner-container">
-                <div class="myInnerSlides fade" id="Age" style="text-align: center;">
+                <div class="myInnerSlides fade centeredDiv" id="Age">
                     <img height="500" src="../Server/outputImg/rel/age.png">
                 </div>
-                <div class="myInnerSlides fade" id="AlcoholDrinking" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="AlcoholDrinking">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/alcoholdrinking.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/alcoholdrinking.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="Asthma" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Asthma">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/asthma.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/asthma.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="BMI" style="text-align: center;">
+                <div class="myInnerSlides fade centeredDiv" id="BMI">
                     <img height="500" src="../Server/outputImg/rel/bmi.png">
                 </div>
-                <div class="myInnerSlides fade" id="Diabetic" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Diabetic">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/diabetic.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/diabetic.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="DiffWalking" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="DiffWalking">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/diffwalking.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/diffwalking.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="GenHealth" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="GenHealth">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/genhealth.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/genhealth.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="KidneyDisease" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="KidneyDisease">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/kidneydisease.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/kidneydisease.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="MentalHealth" style="text-align: center;">
+                <div class="myInnerSlides fade centeredDiv" id="MentalHealth">
                     <img height="500" src="../Server/outputImg/rel/mentalhealth.png">
                 </div>
-                <div class="myInnerSlides fade" id="Race" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Race">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/race.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/race.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="PhysicalActivity" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="PhysicalActivity">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/physicalactivity.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/physicalactivity.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="PhysicalHealth" style="text-align: center;">
+                <div class="myInnerSlides fade centeredDiv" id="PhysicalHealth">
                     <img height="500" src="../Server/outputImg/rel/physicalhealth.png">
                 </div>
-                <div class="myInnerSlides fade" id="Sex" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Sex">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/sex.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/sex.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="SkinCancer" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="SkinCancer">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/skincancer.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/skincancer.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="SleepTime" style="text-align: center;">
+                <div class="myInnerSlides fade centeredDiv" id="SleepTime">
                     <img height="500" src="../Server/outputImg/rel/sleeptime.png">
                 </div>
-                <div class="myInnerSlides fade" id="Smoking" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Smoking">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/smoking.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/smoking.png">
                     </div>
                 </div>
-                <div class="myInnerSlides fade" id="Stroke" style="display: grid; grid-template-columns: 70% 20% 10%; justify-items: center;">
-                    <div style="text-align: center;">
+                <div class="myInnerSlides fade slideGrid702010" id="Stroke">
+                    <div class="centeredDiv">
                         <img height="500" src="../Server/outputImg/rel/stroke.png">
                     </div>
-                    <div style="text-align: left;">
+                    <div class="leftDiv">
                         <img height="450" src="../Server/outputImg/pie/stroke.png">
                     </div>
                 </div>
@@ -163,9 +163,9 @@
         </div>
         <div class="mySlides fade">
             <div class="title"><h1 class="slideTitle"> Heart disease prediction model </h1></div>
-            <div style="display: grid; grid-template-columns: 10% 40% 40% 10%; justify-items: center;">
+            <div class="grid10404010">
                 <div></div>
-                <div style="text-align: center;">
+                <div class="centeredDiv">
                     <h1 style="margin: 0px;"> Confusion matrix </h1><br>
                     <img height="505" src="../Server/outputImg/confusion.png">
                 </div>
@@ -283,11 +283,11 @@
                             </select>
                         </div>
                         <div class="tab">
-                            <div style="text-align: center;">
+                            <div class="centeredDiv">
                                 <img src="./res/loading.gif">
                             </div>
                         </div>
-                        <div id="results" class="tab" style="text-align:center">
+                        <div id="results" class="tab" class="centeredDiv">
                             <div>The model prediction is...</div>
                             <div><h2 id="prediction"></h2></div>
                             <div>with a probability of...</div>
@@ -300,11 +300,11 @@
                             <button type="submit" id="registerResponse" onclick="registerResponse()">Register response</button>
                         </div>
                         <div class="tab">
-                            <div style="text-align: center;">
+                            <div class="centeredDiv">
                                 <img width="300" src="./res/ok.png">
                             </div>
                         </div>
-                        <div style="overflow:auto;">
+                        <div class="buttonContainer;">
                             <button type="submit" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
                             <button type="submit" id="nextBtn" onclick="nextPrev(1)">Next</button>
                             <button type="submit" id="submitBtn" onclick="getPrediction();">Predict</button>
@@ -320,7 +320,7 @@
 
     <br>
     
-    <div style="text-align:center">
+    <div class="centeredDiv">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
