Fixed typing error
Signed-off-by: Federico Berton <105301467+bertonfederico@users.noreply.github.com>

--- a/Client/homePage.html
+++ b/Client/homePage.html
@@ -328,7 +328,7 @@
 
     <script src="js/controller.js"></script>
     <script src="js/util.js"></script>
-    <script src="js/prediction.js"></script>
+    <script src="js/requests.js"></script>
 
 </body>
 </html>
